--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2025, 404 Innovations. Todos os direitos reservados.</p>
+            <p>&copy; 2025, 404 Innovation. Todos os direitos reservados.</p>
         </footer>
     </div>
 
